# ladydebug-bot-planner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: Bot Planner Daily.md  Plano_Bot_Daily.md  deploy-and-docker.md  resumption-ladydebug-bot-planner.md  tests-coverage-report.md  tutorial-reports-equipes-xp.md
src/daily/: command_router.py  main.py
src/daily/adapters/: discord_bot.py  misc.py  storage_sqlite.py  vcs.py
src/daily/core/: day_service.py  link_ingest.py  models.py  report.py  task_service.py
src/daily/ports/: __init__.py
tests/: conftest.py  test_day_service.py  test_discord_bot.py  test_html_extraction.py  test_ingest_and_report.py  test_main_config.py  test_simple_fetcher_security.py  test_storage_sqlite.py  test_summarizer.py  test_task_state_machine.py  test_vcs_adapters.py
