[project]
name = "bot-daily"
version = "0.1.0"
description = "Bot de daily updates para Discord (compatível com Slack)"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3",
    "requests>=2.31",
    # Fase 1+: extração de páginas e .docx
    # "mammoth>=1.6",
    # "trafilatura>=1.8",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.10",
    "pip-audit>=2.7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
